v1/tests/elab/ok/fun_type/fun_type_generic_pairs.pion
def FstType = fun((A, B): (Type, Type), (a, b): (A, B)) -> A;
def SndType = fun((A, B): (Type, Type), (a, b): (A, B)) -> B;
