v1/tests/elab/errors/unification/infinite_solution.pion
def error: fun(Wrap: Type -> Type) -> fun(f: fun(A: _) -> (A -> Wrap(A)) -> Type) -> Type
  = fun(Wrap) => fun(f) => f(_, fun(a) => a);
